add ability to follow other users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <p id="notice"><%= notice %></p>
     <!-- logout button. we have to include method because HTTP will use "get" unless otherwise told. we're telling it to use the delete method -->
     <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:'btn btn-xs btn-danger' %>
     <%= yield %>
