--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,16 +1,59 @@
-<!-- Username -->
 <h1><%= @user.username %>'s Profile</h1>
+<div class="container-fluid">
+<div class="row">
+<!-- profile box -->
+  <div class="col-sm-4">
+    <!-- user profile info -->
+    <h3><%= @user.name %></h3>
+    <h5><%= @user.username %></h5>
+    <h5><p><%= @user.bio %></p></h5>
+    <h5><%= @user.location %></h5>
+    <h5>Joined on <%= @user.created_at.strftime("%B %Y") %></h5>
+    <!-- list of people they follow -->
+    <%= @user.relationships.count %> Following
+    <br>
+    <% @user.relationships.each do |relationship| %>
+      <%= link_to relationship.friend.name, profile_path(relationship.friend) %>
+    <br>
+    <% end %>
+    <!-- list of all their followers -->
+    <%= pluralize(@user.inverse_relationships.count, 'Follower') %>
+    <br>
+    <% @user.inverse_friends.each do |friend| %>
+      <%= link_to friend.name, profile_path(friend) %>
+      <br>
+    <% end %>
+  </div>
+  <!-- tweets box -->
+  <div class="col-sm-7">
+    <div class="panel panel-default">
+      <% @user.tweets.each do |tweet| %>
+        <div class="panel panel-body">
+          <strong><%= tweet.user.username %></strong><small>tweeted</small><%= time_ago_in_words(tweet.created_at) %>
 
-<!-- Show all their tweets -->
-<% @user.tweets.each do |tweet| %>
-  <%= tweet.message %><br>
-<% end %>
+          <br><br>
 
-<!-- only show this stuff it it's not the current user's profile -->
-<% unless current_user.id == @user.id %>
-  <% if current_user.friends.include?(@user)#we're already following the person %>
-    <%= link_to "Unfollow", relationship_path(current_user.relationships.find_by_friend_id(@user)), method: :delete %>
-  <% else %>
-    <%= link_to "Follow", relationships_path(friend_id: @user.id), method: :post %>
+          <%= tweet.message %>
+        </div>
+      <% end %>
+    </div>
+
+  </div>
+</div>
+
+  <!-- Follow/unfollow button -->
+  <!-- only show this stuff it it's not the current user's profile -->
+  <% unless current_user.id == @user.id %>
+    <% if current_user.friends.include?(@user)#we're already following the person %>
+      <%= link_to "Unfollow", relationship_path(current_user.relationships.find_by_friend_id(@user)), method: :delete %>
+    <% else %>
+      <%= link_to "Follow", relationships_path(friend_id: @user.id), method: :post %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
+
+
+  <!-- Show all their tweets -->
+  <% @user.tweets.each do |tweet| %>
+    <%= tweet.message %><br>
+  <% end %>
