--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -16,6 +16,7 @@
     <strong>Tweeted at: </strong><%= @tweet.created_at %>
   </p>
 
+  <%= render 'shared/likes' %>
   <!-- button to edit the tweet -->
   <%= link_to 'Edit Tweet', edit_tweet_path(@tweet), class:'btn btn-sm btn-default' %>
 
